--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -38,8 +38,8 @@
                             </a>
                         </li>
                         <li class="nav_item">
-                            <a href="#services" class="nav_link"> Services
-                                <i class="uil uil-bag nav_icon"></i>
+                            <a href="#services" class="nav_link"> 
+                                <i class="uil uil-bag nav_icon"></i> Services
                             </a>
                         </li>
                         <li class="nav_item">
@@ -66,7 +66,7 @@
         <main class="main">
             <!--==================== HOME ====================-->
             <section class="home section" id="home">
-                <div class="home_cointainer container grid">
+                <div class="home_container container grid">
                     <div class="home_content grid">
                         <div class="home_social">
                             <a href="https://www.linkedin.com/in/khush-desai" target="_blank" class="home_social-icon">
@@ -97,17 +97,17 @@
                             <h1 class="home_title">Hi there!, I am Khush Desai</h1>
                             <h3 class="home_subtitle">Full Stack Developer</h3>
                             <p class="home_description">With experience in Web and Mobile Application Development, Exploring all other parts to being a Dev</p>
-                            <a href="#contact" class="button button--flex">
-                                Contact Me <i class="uil uil-comment nav_icon"></i>
+                            <a href="#contact" class="button button--flex">Contact Me
+                                <i class="uil uil-comment nav_icon"></i>
                             </a>
                         </div>
-                        <div class="home_scroll">
+                        <!-- <div class="home_scroll">
                             <a href="#about" class="home_scroll-button button--flex">
                                 <i class="uil uil-mouse-alt home_scroll-mouse"></i>
                                 <span class="home_scroll-name">Scroll Down</span>
                                 <i class="uil uil-angle-double-down home_scroll-arrow"></i>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -124,7 +124,8 @@
                             <div>
                                 <span class="about_info-title">02+</span>
                                 <span class="about_info-name">Years <br> Experience</span>
-
+                            </div>
+                            <div>
                                 <span class="about_info-title">12+</span>
                                 <span class="about_info-name">Completed<br>Projects</span>
                             </div>
@@ -529,12 +530,6 @@
                         <a href="https://github.com/It-is-KD" target="_blank" class="footer_social-icon">
                             <i class="uil uil-github"></i>
                         </a>
-                    </div>
-
-                    <div class="footer_payment">
-                        <form>
-                            <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_LsZkGjwPMCJmGF" async></script> 
-                        </form>
                     </div>
 
                 </div>
